[package]
name = "ogmara-push-gateway"
version = "0.2.0"
edition = "2021"
authors = ["Ogmara Contributors"]
license = "MIT"
description = "Ogmara push notification gateway — bridges L2 mentions to FCM, APNs, and Web Push"
publish = false

[[bin]]
name = "ogmara-push-gateway"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.50", features = ["full"] }

# HTTP framework (device registration API)
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# HTTP client (push provider APIs)
reqwest = { version = "0.13", features = ["json"] }

# WebSocket (connect to L2 nodes)
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Configuration
toml = "1.1"

# CLI
clap = { version = "4.6", features = ["derive"] }

# Cryptography (JWT signing for FCM/APNs/VAPID)
rsa = { version = "0.9", features = ["pkcs5"] }
sha2 = { version = "0.10", features = ["oid"] }
hmac = "0.12"
p256 = { version = "0.13", features = ["ecdsa", "pkcs8"] }

# Utilities
urlencoding = "2.1"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1"
base64 = "0.22"

[dev-dependencies]
tokio = { version = "1.50", features = ["test-util", "macros"] }
